--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "gatsby": "^2.23.3",
     "gatsby-image": "^2.4.7",
     "gatsby-plugin-emotion": "^4.3.4",
+    "gatsby-plugin-layout": "^1.3.4",
     "gatsby-plugin-manifest": "^2.4.11",
     "gatsby-plugin-offline": "^3.2.9",
     "gatsby-plugin-react-helmet": "^3.3.4",
     "gatsby-plugin-sharp": "^2.6.11",
+    "gatsby-plugin-transitions": "^2.1.6",
     "gatsby-plugin-typography": "^2.5.4",
     "gatsby-source-filesystem": "^2.3.11",
     "gatsby-transformer-sharp": "^2.5.5",
@@ -21,6 +23,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
+    "react-spring": "^8.0.27",
     "react-typography": "^0.16.19",
     "typography": "^0.16.19",
     "typography-theme-alton": "^0.16.19",
